--- a/package.json
+++ b/package.json
@@ -3,21 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "dependencies": {
-    "@fancyapps/fancybox": "^3.5.7",
-    "gulp-plumber": "^1.2.0",
-    "gulp-sourcemaps": "^2.6.4"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.24.4",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-sass": "^5.1.0",
-    "sass": "^1.4.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "dependencies": {},
+  "devDependencies": {},
+  "scripts": {},
   "keywords": [],
   "author": "maxpertici",
   "license": "ISC"
